# c-game-raylib

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Config.h  Entity.c  Entity.h  GameEngine.c  GameEngine.h  customBehaviours.h  engine.c  engine.h  game.h  main.c
src/Config/: CMakeLists.txt  Config.c
src/Entity/: CMakeLists.txt  Entity.c  Entity.h
src/GameEngine/: CMakeLists.txt  GameEngine.c  GameEngine.h
src/RenderComponent/: CMakeLists.txt  RenderComponent.c  RenderComponent.h
